r119 (09. 01. 2023):
Assault Delay Tracker: Fixed a crash when alarm went off
Enemy Count Tracker: Fixed a visual issue where 2 icons overlap each other

r118 (08. 01. 2023):
Menu: Fixed a visibility issue with options having multiple parents
Minion Tracker: Tracker will use less space on the screen
Slaughterhouse: Fixed a visual issue in achievement tracker "Not hard enough"

r117 (05. 01. 2023):
Shadow Raid: Fixed a crash at sync

r116 (03. 01. 2023):
Enemy Counter: Fixed a crash when option "Show enemies with pager (stealth)" is enabled

r115 (02. 01. 2023):
Added option "Show enemies with pager (stealth)"
Inventory: Fixed missing strings in Sicario
Inventory: Fixed percent issue in Leech

r114 (01. 01. 2023):
Inventory: Fixed crashes related to Stoic and Leech

r113 (31. 12. 2022):
Fixed a possible crash in menu

r112 (30. 12. 2022):
Added "Show Detailed Inventory Description" option

r111 (27. 12. 2022):
Added Copycat buffs

r110 (17. 12. 2022):
Added option "Bloodthirst Ratio"

r109 (15. 12. 2022):
Updated code to properly support "A Criminal Carol" event
Implemented a new achievement hooking format which will improve memory efficiency and improve framerate
Assault Delay Tracker: Improved accuracy if playing with difficulty overhaul mods, for example "Crackdown"

r108 (12. 12. 2022):
Meltdown: Fixed a crash related to waypoints

r107 (08. 12. 2022):
Goat Simulator Day 2: Fixed an issue where empty cage increased achievement progress

r106 (06. 12. 2022):
Fixed a crash when waypoints are modified by other HUD

r105 (05. 12. 2022):
Fixed syncing with other EHI players

r104 (04. 12. 2022):
Midland Ranch: Fixed a crash
Fixed a crash at "GetElementTimer()"

r103 (03. 12. 2022):
Golden Grin Casino: Fixed a load crash

r102 (02. 12. 2022):
Fixed a menu crash related to DigitalGui

r101 (01. 12. 2022):
Reworked buff "Forced Friendship (Absorption)" to show value and not percentage
Fixed compatibility with "More Weapon Stats" mod

r100 (29. 11. 2022):