@@ -491,7 +491,7 @@
     "ehi_bm_doctor_bag" : "Regeneruje zdraví a obnovuje pády",
     "ehi_bm_doctor_bag_2" : "Quick Fix: Po použití snižuje utržené poškození o $multiplier na $duration;s",
     "ehi_bm_ammo_bag" : "Sekundární zbraň se nabije první, poté až primární",
-    "ehi_bm_ammo_bag_2" : "Bulletstorm: Po použití neomezená munice až na %ds (záleží kolik munice si vezmeš)",
+    "ehi_bm_ammo_bag_2" : "Bulletstorm: Po použití neomezená munice až na %ds (záleží kolik munice se vezme)",
     "ehi_bm_armor_kit" : "Sbalí tvůj vybraný armor a začínáš s oblekem (Two-Piece Suit)\nPo použití budeš mít svůj vybraný armor\nZměna je nevratná",
     "ehi_bm_ecm_jammer" : "Odemyká elektronické bezpečnostní dveře",
     "ehi_bm_ecm_jammer_2" : "Oddaluje pagery",
@@ -507,8 +507,8 @@
     "ehi_bm_sentry_gun_8" : "stupňů",
     "ehi_bm_sentry_gun_silent" : "Výstřel je tlumený",
     "ehi_bm_first_aid_kit" : "Regeneruje pouze zdraví",
-    "ehi_bm_first_aid_kit_2" : "Uppers: Automatická obnova zdraví pokud ti během boje dojde a jsi v oblasti FAK (%sm)\nPo použití se skill obnoví za %ds",
-    "ehi_bm_grenade_crate" : "Jedno použití obnoví všechny hoditelné předměty",
+    "ehi_bm_first_aid_kit_2" : "Uppers: Automatická regenerace zdraví pokud vám během boje dojde a jste v oblasti FAK (%sm)\nObnova po použití: %ds",
+    "ehi_bm_grenade_crate" : "Jedno použití obnoví počet hoditelných předmětů až na maximum",
     "ehi_bm_grenade_crate_2" : "Nefunguje na ability z perku",
     "ehi_bm_damage" : "Poškození",
     "ehi_bm_max_damage" : "Max poškození",
