@@ -491,7 +491,7 @@
     "ehi_bm_doctor_bag" : "Restores health and downs",
     "ehi_bm_doctor_bag_2" : "Quick Fix: After use, $multiplier less damage for $duration;s",
     "ehi_bm_ammo_bag" : "Secondary weapon is refilled first, then primary",
-    "ehi_bm_ammo_bag_2" : "Bulletstorm: Unlimited ammo after use for up to %ds (depends on how much ammo you have taken)",
+    "ehi_bm_ammo_bag_2" : "Bulletstorm: Unlimited ammo after use for up to %ds (depends on how much ammo have been taken)",
     "ehi_bm_armor_kit" : "Packs your selected armor and you start with Two-Piece Suit\nAfter use, you will have your selected armor\nAfter change you cannot switch back to suit",
     "ehi_bm_ecm_jammer" : "Unlocks Electronic Security Doors",
     "ehi_bm_ecm_jammer_2" : "Delays Pagers",
@@ -508,7 +508,7 @@
     "ehi_bm_sentry_gun_silent" : "Silenced",
     "ehi_bm_first_aid_kit" : "Restores health only",
     "ehi_bm_first_aid_kit_2" : "Uppers: Autoheal after you lost all health and you are in FAK's range of %sm\nCooldown: %ds",
-    "ehi_bm_grenade_crate" : "One use restores all throwables",
+    "ehi_bm_grenade_crate" : "One use restores the amount of throwables up to max",
     "ehi_bm_grenade_crate_2" : "Does not work with perk deck abilities",
     "ehi_bm_damage" : "Damage",
     "ehi_bm_max_damage" : "Max Damage",
