@@ -288,6 +288,9 @@
     "ehi_show_enemy_count_tracker" : "Счётчик врагов",
     "ehi_show_enemy_count_tracker_desc" : "показывать, сколько врагов осталось на карте",
 
+    "ehi_show_enemy_count_show_pagers" : "Показывать врагов с помощью пейджера (тихое прохождение)",
+    "ehi_show_enemy_count_show_pagers_desc" : "Показывает врагов с пейджером слева и врагов без пейджера справа\nКак только звучит сигнал тревоги, видно только несколько врагов.",
+
     "ehi_show_laser_tracker" : "Трекер лазеров",
     "ehi_show_laser_tracker_desc" : "показывать трекер для лазеров, которые работают каждые несколько секунд",
 
@@ -472,5 +475,83 @@
     "ehi_buffs_other_crit_persistent" : "Постоянный шанс критического урона",
     "ehi_buffs_other_crit_persistent_desc" : "'Шанс критического урона' останется на вашем экране, когда ваш крит ниже 0%",
     "ehi_buffs_other_inspire_ai" : "Вдохновение (ИИ)",
-    "ehi_buffs_other_regen_throwable_ai" : "Регенерация (ИИ)"
+    "ehi_buffs_other_regen_throwable_ai" : "Регенерация (ИИ)",
+
+    "ehi_inventory_menu" : "Инвентарь",
+    "ehi_inventory_menu_desc" : "",
+
+    "ehi_show_inventory_detailed_description" : "Показывать подробное описание инвентаря",
+    "ehi_show_inventory_detailed_description_desc" : "Показывает подробное описание метательных предметов и снаряжения.",
+
+    "ehi_hide_original_desc" : "Скрывать исходное описание",
+    "ehi_hide_original_desc_desc" : "Скрывает исходное описание",
+
+    "ehi_bm_charges" : "%s использования (использований) (%s всего использованого)",
+    "ehi_bm_charges_no_total" : "%s использования (использований)",
+    "ehi_bm_doctor_bag" : "Восстанавливает здоровье и падения",
+    "ehi_bm_doctor_bag_2" : "Скорая помощь: после использования $multiplier меньше урона в течение $duration;s",
+    "ehi_bm_ammo_bag" : "Сначала перезаряжается вторичное оружие, затем основное",
+    "ehi_bm_ammo_bag_2" : "Свинцовый ливень: Неограниченный боезапас после использования от %ds (зависит от того, сколько патронов вы взяли)",
+    "ehi_bm_armor_kit" : "Упаковывает выбранную вами броню, и вы начинаете в костюме-двойке\nПосле использования у вас будет выбранная броня\nПосле изменения вы не сможете вернуться к костюму",
+    "ehi_bm_ecm_jammer" : "Открывает электронные защитные двери",
+    "ehi_bm_ecm_jammer_2" : "Задерживает пейджеры",
+    "ehi_bm_bodybags_bag" : "Мешок для трупов может спрятать одно мертвое тело (стелс).",
+    "ehi_bm_trip_mine" : "Огненная ловушка",
+    "ehi_bm_sentry_gun" : "Здоровье",
+    "ehi_bm_sentry_gun_2" : "Патроны",
+    "ehi_bm_sentry_gun_3" : "Бронебойный режим (переключаемый)",
+    "ehi_bm_sentry_gun_4" : "Бронебойный режим",
+    "ehi_bm_sentry_gun_5" : "Защитный экран",
+    "ehi_bm_sentry_gun_6" : "Стоимость боеприпасов для размещения",
+    "ehi_bm_sentry_gun_7" : "Точность",
+    "ehi_bm_sentry_gun_8" : "Степень",
+    "ehi_bm_sentry_gun_silent" : "Тихий вариант",
+    "ehi_bm_first_aid_kit" : "Восстанавливает только здоровье",
+    "ehi_bm_first_aid_kit_2" : "Колёса: Автолечение после того, как вы потеряли все здоровье и находитесь в радиусе действия АПП. %sm\nОткат: %ds",
+    "ehi_bm_grenade_crate" : "Одно использование восстанавливает все метательные предметы (будь это гранаты или карточки)",
+    "ehi_bm_grenade_crate_2" : "Не работает со способностями колоды перков",
+    "ehi_bm_damage" : "Урон",
+    "ehi_bm_max_damage" : "Максимальный урон",
+    "ehi_bm_range" : "Диапазон",
+    "ehi_bm_base_cooldown" : "Базовый откат",
+    "ehi_bm_duration" : "Продолжительность",
+    "ehi_bm_cooldown_drain" : "Каждое убийство ускоряет перезарядку на %ss",
+    "ehi_bm_instant" : "Мгновенный",
+    "ehi_bm_poison" : "Яд",
+    "ehi_bm_fire" : "Огонь",
+    "ehi_bm_dot" : "Временный урон",
+    "ehi_bm_dot_tick_period" : "Урон каждый %ss",
+    "ehi_bm_dot_chance" : "Шанс срабатывания",
+    "ehi_bm_explosion" : "Взрыв",
+    "ehi_bm_fir_com" : "Сначала взрывается, затем выпускает огненный взрыв",
+    "ehi_bm_concussion_1" : "Вспыхивает и оглушает врагов",
+    "ehi_bm_concussion_2" : "После восстановления мелькающие враги будут иметь точность %s%s в течение %ds",
+    "ehi_bm_poison_gas_grenade_1" : "Сначала взрывается, а затем выделяет ядовитый газ.",
+    "ehi_bm_poison_gas_grenade_2" : "Облако",
+    "ehi_bm_sticky_grenade" : "Прилипает к поверхностям и врагам",
+    "ehi_bm_kingpin_1" : "Исцеляет вас за %s%s за каждый урон (активный)",
+    "ehi_bm_kingpin_2" : "Ближайшие враги выберут вас как приоритетную цель (активный)",
+    "ehi_bm_kingpin_3" : "Когда ниже %s%s здоровья, эффект увеличивается за счет %s%s (активный)",
+    "ehi_bm_kingpin_4" : "При полном показателе здоровья, время восстановления уменьшается на дополнительные %ss за %s полученное здоровье (активный)",
+    "ehi_bm_sicario_1" : "Находясь внутри дымовой завесы, вы и ваши союзники избегаете %s%s всех пуль",
+    "ehi_bm_sicario_2" : "Точность врагов внутри дымовой завесы снижена на %s%s",
+    "ehi_bm_sicario_3" : "Все эффекты вашей колоды перков усиливаются на %s%s пока вы в дымовой завесе",
+    "ehi_bm_sicario_4" : "Любой из ваших союзников внутри дымовой завесы получит %s%s шанс уворота",
+    "ehi_bm_stoic_1" : "Использование фляжки стоика сводит на нет все ожидаемые повреждения.",
+    "ehi_bm_stoic_2" : "Если ваше здоровье ниже %s%s, время восстановления будет уменьшено на %ss за каждое убийство вместо %ss",
+    "ehi_bm_tagteam_1" : "Каждый враг, убитый вами или вашим выбранным напарником, исцеляет вас на %s здоровья и напарника на %s здоровья (активный)",
+    "ehi_bm_tagteam_2_a" : "Каждое ваше убийство продлевает продолжительность на %ss и уменьшает время восстановления на %ss (активный)",
+    "ehi_bm_tagteam_2_b" : "Каждое ваше убийство продлевает продолжительность на %ss (активный)",
+    "ehi_bm_tagteam_2_c" : "Каждое ваше убийство сокращает время восстановления на %ss (активный)",
+    "ehi_bm_tagteam_2_d" : "Каждое убийство, которое совершает отмеченный напарник сокращает время восстановления на %ss (активный)",
+    "ehi_bm_tagteam_3" : "Каждое ваше убийство или отмеченного напарника увеличивает поглощение на %s вплоть до %s (активный)\nСбрасывается после завершения действия парилки",
+    "ehi_bm_hacker_1" : "Каждое убийство исцеляет вас на %dздоровья (активный - громкий подход)",
+    "ehi_bm_hacker_2" : "Временно увеличивает уворот при убийстве: +%s%s за %ss (активный)",
+    "ehi_bm_hacker_3" : "Каждое убийство напарника исцеляет их на %dHP (активный - громкий подход)",
+    "ehi_bm_leech_1" : "Восстанавливает %s%s здоровье при активации",
+    "ehi_bm_leech_2" : "Отключает вашу броню, пока ампула активна",
+    "ehi_bm_leech_3" : "Каждый %s убийств(а) дает вам неуязвимость на %ss (активный)",
+    "ehi_bm_leech_4" : "Делит ваше здоровье на %s сегментов и убитые %s враги восстанавливают 1 сегмент (активный)\nПри получении урона удаляется 1 сегмент\nЕсли урон закончился %s, %s сегменты удалены",
+    "ehi_bm_leech_5" : "Вы не можете быть сбиты с ног, но если у вас мало здоровья, ваша скорость передвижения замедлится на %s%s (активный)",
+    "ehi_bm_leech_6" : "Вы можете активировать ампулу, будучи сбитым с ног, вы останетесь в живых, если оживите товарища по команде или используете медицинскую сумку, и у вас больше 0 HP."
 }
